added farming pools info endpoint + caching
